Performance improvements. ACK are batched. Removed a lot of lock and replaced with concurrent queues. Introduced a network session object to use in the server for ACK/NAK. Not completely ready yet. Performance can deal with more than 700 players concurrently on the same spot. Tried 1000, but that introduced buffer overflow. So still a bit performance to improve.

--- a/src/MiNET/MiNET.Service/App.config
+++ b/src/MiNET/MiNET.Service/App.config
@@ -25,7 +25,7 @@
 			<layout type="log4net.Layout.PatternLayout">
 				<!-- Pattern to output the caller's file name and line number -->
 				<!--<conversionPattern value="%5level [%thread] (%file:%line) - %message%newline" />-->
-				<conversionPattern value="%5level [%class] - %message%newline" />
+				<conversionPattern value="%5level [%.10class] - %message%newline" />
 			</layout>
 			<filter type="log4net.Filter.LevelRangeFilter">
 				<levelMin value="INFO" />
